Fix chrome issue cutting off image

--- a/static/sass/_pattern_p-navigation.scss
+++ b/static/sass/_pattern_p-navigation.scss
@@ -22,7 +22,7 @@
 
     @media screen and (min-width: $breakpoint-x-large) {
       max-height: 1.25rem;
-      min-height: 1rem;
+      min-height: 1.3rem;
     }
   }
 
